--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Кофейня BeanScene</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -61,9 +61,10 @@
         </main>
       </div>
     </div>
+
     <div class="secondblock" id="about">
-      <div class="container-row">
-        <div class="container-column">
+      <div class="container2-row">
+        <div class="container2-column">
           <div class="secondblock-title ">
             Discover the best coffee
           </div>
@@ -80,12 +81,13 @@
           <img src="./img/cup.jpg" alt="">
         </div>
       </div>
-      <div class="secondcontainer_fon">
+      <div class="secondcontainer2_fon">
         <img src="./img/coffee_blast.png" alt="" class="line1">
       </div>
     </div>
+
     <div class="thirdblock" id="menu">
-      <div class="container">
+      <div class="container3">
         <div class="thirdblock-title">Enjoy a new blend of coffee style</div>
         <div class="thirdblock-text">Explore all flavours of coffee with us. There is always a new cup worth
           experiencing</div>
@@ -121,7 +123,187 @@
         </div>
       </div>
     </div>
-    <footer class="footer"></footer>
+
+
+    <div class="fourthblock">
+      <div class="containerfourth">
+        <div class="fourthblock-title">Why are we different?</div>
+        <div class="fourthblock-text">We don’t just make your coffee, we make your day!</div>
+      </div>
+
+      <div class="fourthblock-row row">
+        <div class="fourthblock-column">
+          <div class="fourthblock-column-card">
+            <div class="fourthblock-column-picture"><img src="./img/coffee-beans 1.svg" alt="Cappuccino"> </div>
+            <div class="fourthblock-column-title">Supreme Beans</div>
+            <div class="fourthblock-column-text">Beans that provides
+              great taste</div>
+          </div>
+        </div>
+
+        <div class="fourthblock-column">
+          <div class="fourthblock-column-card">
+            <div class="fourthblock-column-picture"><img src="./img/badge 1.svg" alt="Cappuccino"> </div>
+            <div class="fourthblock-column-title">High Quality</div>
+            <div class="fourthblock-column-text">We provide the
+              highest quality</div>
+          </div>
+        </div>
+
+        <div class="fourthblock-column">
+          <div class="fourthblock-column-card">
+            <div class="fourthblock-column-picture"><img src="./img/coffee-cup 1.svg" alt="Cappuccino"> </div>
+            <div class="fourthblock-column-title">Extraordinary</div>
+            <div class="fourthblock-column-text">Coffee like you have never tasted</div>
+          </div>
+        </div>
+
+        <div class="fourthblock-column">
+          <div class="fourthblock-column-card">
+            <div class="fourthblock-column-picture"><img src="./img/best-price 1.png" alt="Cappuccino"> </div>
+            <div class="fourthblock-column-title">Affordable Price</div>
+            <div class="fourthblock-column-text">Our Coffee prices are easy to afford</div>
+          </div>
+        </div>
+      </div>
+      <div class="container4">
+
+        <div class="fourthblock-title2">Great ideas start with great coffee, Lets help you achieve that</div>
+        <div class="fourthblock-text2">Get started today.</div>
+        <div class="fourthblock-button2">Join Us</div>
+      </div>
+      <div class="fourthblock-fon line2"><img src="./img/coffee_blastright.png" alt="">
+      </div>
+    </div>
+
+    <div class="fifthblock-fon"><img src="./img/fonpic5.jpg" alt="" class="fon2">
+      <div class="fifthblock">
+
+        <div class="container5">
+          <div class="fifthblock-title">Get a chance to have an Amazing morning</div>
+          <div class="fifthblock-text">We are giving you are one time opportunity to experience a better life with
+            coffee.
+          </div>
+          <div class="fifthblock-button">Order Now</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="sixthblock">
+      <div class="sixthblock-fonleft"><img src="./img/coffee_blast6left.png" alt="" class="line3"></div>
+      <div class="sixthblock-fonright"><img src="./img/coffee_blast6right.png" alt="" class="line4"></div>
+      <div class="container6">
+        <div class="sixthblock-title">Our coffee perfection feedback</div>
+        <div class="sixthblock-text">Our customers has amazing things to say about us</div>
+      </div>
+
+      <div class="sixthblock-review">
+        <div class="sixthblock-review-text">
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+          electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+          Letraset.....
+        </div>
+        <div class="sixthblock-review-name">Jonny Thomas</div>
+        <div class="sixthblock-review-position">Project Manager</div>
+        <div class="sixthblock-review-foto">
+          <img src="./img/reviewfoto.jpg" alt="" class="review-foto">
+        </div>
+      </div>
+    </div>
+
+    <div class="seventhblock">
+      <div class="container7">
+        <div class="seventhblock-content">
+          <div class="seventhblock-title">Subscribe to get the Latest News</div>
+          <div class="seventhblock-text">Don’t miss out on our latest news, updates, tips and special offers</div>
+
+
+          <div class="seventhblock-window">
+            <input type="email" class="seventhblock-email"  placeholder="Enter your mail">
+            <input type="button" class="seventhblock-button" placeholder="" value="Suscribe">
+          </div>
+
+
+        </div>
+      </div>
+    </div>
+  
+    <div class="footer">
+      <div class="container-footer-fon">
+        <div class="cup-bottom">
+          <div class="cupl"></div>
+         
+        <div class="container-footer-menu">
+          <div class="footer-column1">
+            <div class="footer-column1-title">Bean Scene</div>
+            <div class="footer-column1-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took
+              a galley of type and scrambled it to make a type specimen book.</div>
+            <div class="footer-column1-icon">
+              <img src="./img/facebook.svg" alt="" class="icon-facebook footer-icon">
+              <img src="./img/inst.svg" alt="" class="icon-inst footer-icon">
+              <img src="./img/youtube.svg" alt="" class="icon-youtube footer-icon">
+              <img src="./img/twit.svg" alt="" class="icon-twit footer-icon">
+            </div>
+          </div>
+          <div class="footer-column2">
+            <div class="footer-column2-title">About</div>
+            <div class="footer-column2-menu">Menu</div>
+            <div class="footer-column2-features">Features</div>
+            <div class="footer-column2-news">News & Blogs</div>
+            <div class="footer-column2-help">Help & Supports</div>
+          </div>
+          <div class="footer-column3">
+            <div class="footer-column3-title">Company</div>
+            <div class="footer-column3-work">How we work</div>
+            <div class="footer-column3-service">Terms of service</div>
+            <div class="footer-column3-pricing">Pricing</div>
+            <div class="footer-column3-faq">FAQ</div>
+          </div>
+          <div class="footer-column4">
+            <div class="footer-column4-title">Contact Us</div>
+            <div class="footer-column4-adress">Akshya Nagar 1st Block 1st Cross,<br>Rammurthy nagar, Bangalore-560016
+            </div>
+            <div class="footer-column4-tel">+1 202-918-2132</div>
+            <div class="footer-column4-mail">beanscene@mail.com</div>
+            <div class="footer-column4-faq-site">www.beanscene.com</div>
+
+          </div>
+        </div>
+
+        <div class="cupr"></div>
+        </div>
+
+
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   </div>
   <script src="script.js"></script>
 </body>
